--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.codingame.game</groupId>
-	<artifactId>fall-challenge-2022-keep-off-the-grass</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>com.codingame.game</groupId>
+    <artifactId>fall-challenge-2022-keep-off-the-grass</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <gamengine.version>4.4.0</gamengine.version>
@@ -24,12 +25,12 @@
             <artifactId>module-entities</artifactId>
             <version>${gamengine.version}</version>
         </dependency>
-        
+
         <dependency>
-			<groupId>com.codingame.gameengine</groupId>
-			<artifactId>module-endscreen</artifactId>
-			<version>${gamengine.version}</version>
-		</dependency>
+            <groupId>com.codingame.gameengine</groupId>
+            <artifactId>module-endscreen</artifactId>
+            <version>${gamengine.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.codingame.gameengine</groupId>
@@ -37,4 +38,31 @@
             <version>${gamengine.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.codingame.Runner</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
